Fix: Autosuggest - z-index on results (#2330)

--- a/src/components/autosuggest/_autosuggest.scss
+++ b/src/components/autosuggest/_autosuggest.scss
@@ -131,7 +131,7 @@
       box-shadow: 0 0 5px 0 rgba($color-black, 0.6);
       left: 0;
       position: absolute;
-      z-index: 1;
+      z-index: 10;
     }
   }
 }
